# starla-rs

./: AGENTS.md  CLAIM_STATUS.md  Cargo.toml  IMPLEMENTATION_DECISIONS.md  IMPLEMENTATION_PLAN.md  README.md  RECOVERY.md  SCOPE.md
.github/workflows/: core-http-claim.yml  core-tools-http-claim.yml
scripts/: run-core-http-claim.sh
src/: http.rs  lib.rs  main.rs  runtime.rs  store.rs
src/domain/: agents.rs  errors.rs  executions.rs  mod.rs  sessions.rs  tools.rs
tests/: core_http_blackbox.rs  core_http_claim.rs
